--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -29,8 +29,19 @@
                     </div>
                     <div class="card-body">
                         <div class="text-center mb-4">
-                            <img src="https://via.placeholder.com/150" alt="Profile Picture" class="rounded-circle mb-3"
-                                style="width: 150px; height: 150px; object-fit: cover;">
+                            <div style="position: relative; display: inline-block;">
+                                <img id="profilePic" src="/images/utenteDefault.png" alt="Profile Picture"
+                                    class="rounded-circle mb-3" style="width: 150px; height: 150px; object-fit: cover;">
+                                <label for="fileInput" class="btn btn-sm btn-primary rounded-circle"
+                                    style="position: absolute; bottom: 15px; right: 0; width: 35px; height: 35px; padding: 6px 0;">
+                                    +
+                                </label>
+                                <button id="removePicBtn" class="btn btn-sm btn-danger rounded-circle"
+                                    style="position: absolute; bottom: 15px; left: 0; width: 35px; height: 35px; padding: 6px 0; display: none;">
+                                    x
+                                </button>
+                                <input type="file" id="fileInput" style="display: none;" accept="image/*">
+                            </div>
                             <h4 id="username" class="card-title mb-0">Loading...</h4>
                             <p id="email" class="text-muted">Loading...</p>
                         </div>
@@ -62,6 +73,71 @@
                     document.getElementById('email').textContent = user.email;
                     document.getElementById('friendsCount').textContent = user.friends ? user.friends.length : 0;
                     document.getElementById('friendRequestsCount').textContent = user.friendRequests ? user.friendRequests.length : 0;
+
+                    if (user.profilePicture) {
+                        document.getElementById('profilePic').src = user.profilePicture;
+                    }
+
+                    // File Upload Listener
+                    const fileInput = document.getElementById('fileInput');
+                    const removePicBtn = document.getElementById('removePicBtn');
+
+                    // Show remove button if user has a custom picture
+                    if (user.profilePicture) {
+                        removePicBtn.style.display = 'block';
+                    }
+
+                    fileInput.addEventListener('change', async (e) => {
+                        const file = e.target.files[0];
+                        if (!file) return;
+
+                        const formData = new FormData();
+                        formData.append('profilePicture', file);
+
+                        try {
+                            const response = await fetch(`/api/users/${user._id}/profile-picture`, {
+                                method: 'POST',
+                                body: formData
+                            });
+
+                            if (response.ok) {
+                                const result = await response.json();
+                                document.getElementById('profilePic').src = result.profilePicture;
+                                removePicBtn.style.display = 'block'; // Show remove button
+                                alert('Profile picture updated!');
+                            } else {
+                                const error = await response.json();
+                                alert('Error uploading picture: ' + (error.message || 'Unknown error'));
+                            }
+                        } catch (err) {
+                            console.error('Upload error:', err);
+                            alert('Failed to upload picture.');
+                        }
+                    });
+
+                    // Remove Picture Listener
+                    removePicBtn.addEventListener('click', async () => {
+                        if (!confirm('Are you sure you want to remove your profile picture?')) return;
+
+                        try {
+                            const response = await fetch(`/api/users/${user._id}/profile-picture`, {
+                                method: 'DELETE'
+                            });
+
+                            if (response.ok) {
+                                document.getElementById('profilePic').src = '/images/utenteDefault.png';
+                                removePicBtn.style.display = 'none'; // Hide remove button
+                                alert('Profile picture removed!');
+                            } else {
+                                const error = await response.json();
+                                alert('Error removing picture: ' + (error.message || 'Unknown error'));
+                            }
+                        } catch (err) {
+                            console.error('Remove error:', err);
+                            alert('Failed to remove picture.');
+                        }
+                    });
+
                 } else {
                     window.location.href = '/login';
                 }
