--- a/src/frontend/utility/navbar.html
+++ b/src/frontend/utility/navbar.html
@@ -33,8 +33,8 @@
             document.body.appendChild(script);
         }
       ">Crea Partita</a>
-      <a class="nav-link" href="map" style="margin-right: 15px;">Mappa</a>
-      <a class="nav-link" href="profile">Profilo</a>
+      <a class="nav-link" href="/map" style="margin-right: 15px;">Mappa</a>
+      <a class="nav-link" href="/profile">Profilo</a>
     </div>
   </div>
 </nav>
