Add friend requests

--- a/src/frontend/user_profile.html
+++ b/src/frontend/user_profile.html
@@ -33,6 +33,8 @@
                             <img id="profilePic" src="/images/utenteDefault.png" alt="Profile Picture"
                                 class="rounded-circle mb-3" style="width: 150px; height: 150px; object-fit: cover;">
                             <h4 id="username" class="card-title mb-0">Loading...</h4>
+                            <button id="addFriendBtn" class="btn btn-primary mt-3" style="display: none;">Richiedi
+                                amicizia</button>
                         </div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -66,6 +68,57 @@
                     if (user.profilePicture) {
                         document.getElementById('profilePic').src = user.profilePicture;
                     }
+
+                    // Fetch current user to check if we can add friend
+                    try {
+                        const currentUserResp = await fetch('/auth/current_user');
+                        if (currentUserResp.ok) {
+                            const currentUser = await currentUserResp.json();
+
+                            // Check if:
+                            // 1. Not own profile
+                            // 2. Not already friends (friends list contains ID? API returns usernames for friends on public profile, need to check ID from full user array if possible, OR just check usernames since public endpoints return that. Wait, /username/:username returns friends as simple objects or IDs? 
+                            // Let's check users.ts: .populate('friends', 'username'). So user.friends is array of objects { _id, username }.
+                            // We need to compare IDs.
+
+                            // Actually, public profile 'friends' are populated with { _id, username }. 
+                            // currentUser._id vs user._id
+
+                            const isOwnProfile = currentUser._id === user._id;
+                            const isAlreadyFriend = user.friends.some(f => f._id === currentUser._id || f === currentUser._id); // Handle both populated and unpopulated just in case
+
+                            if (!isOwnProfile && !isAlreadyFriend) {
+                                const addFriendBtn = document.getElementById('addFriendBtn');
+                                addFriendBtn.style.display = 'inline-block';
+
+                                console.log("step 1")
+
+                                addFriendBtn.addEventListener('click', async () => {
+                                    try {
+                                        const req = await fetch(`/api/users/${user._id}/friend-requests`, {
+                                            method: 'POST',
+                                            headers: { 'Content-Type': 'application/json' },
+                                            body: JSON.stringify({ requesterId: currentUser._id })
+                                        });
+
+                                        if (req.ok) {
+                                            alert('Richiesta inviata!');
+                                            addFriendBtn.style.display = 'none';
+                                        } else {
+                                            const err = await req.json();
+                                            alert('Errore: ' + err.message);
+                                        }
+                                    } catch (e) {
+                                        console.error(e);
+                                        alert('Errore di connessione');
+                                    }
+                                });
+                            }
+                        }
+                    } catch (e) {
+                        console.error('Error fetching current user', e);
+                    }
+
                 } else {
                     document.getElementById('username').textContent = 'User not found';
                 }
