--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -7,6 +7,7 @@
     <title>TrentoArena - Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/friend_requests_popup.css">
 </head>
 
 <body>
@@ -21,133 +22,207 @@
     </script>
 
     <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card shadow-sm">
-                    <div class="card-header bg-primary text-white">
-                        <h3 class="mb-0">User Profile</h3>
-                    </div>
-                    <div class="card-body">
-                        <div class="text-center mb-4">
-                            <div style="position: relative; display: inline-block;">
-                                <img id="profilePic" src="/images/utenteDefault.png" alt="Profile Picture"
-                                    class="rounded-circle mb-3" style="width: 150px; height: 150px; object-fit: cover;">
-                                <label for="fileInput" class="btn btn-sm btn-primary rounded-circle"
-                                    style="position: absolute; bottom: 15px; right: 0; width: 35px; height: 35px; padding: 6px 0;">
-                                    +
-                                </label>
-                                <button id="removePicBtn" class="btn btn-sm btn-danger rounded-circle"
-                                    style="position: absolute; bottom: 15px; left: 0; width: 35px; height: 35px; padding: 6px 0; display: none;">
-                                    x
-                                </button>
-                                <input type="file" id="fileInput" style="display: none;" accept="image/*">
-                            </div>
-                            <h4 id="username" class="card-title mb-0">Loading...</h4>
-                            <p id="email" class="text-muted">Loading...</p>
+        <div class="d-flex flex-column flex-lg-row align-items-start justify-content-center p-4 gap-5">
+            <!-- Left Column: Profile Picture -->
+            <div class="flex-shrink-0 text-center">
+                <div style="position: relative; display: inline-block;">
+                    <img id="profilePic" src="/images/utenteDefault.png" alt="Profile Picture" class="rounded-circle"
+                        style="width: 350px; height: 350px; object-fit: cover; border: 5px solid #fff; box-shadow: 0 0 15px rgba(0,0,0,0.1);">
+                    <label for="fileInput" class="btn btn-primary rounded-circle shadow"
+                        style="position: absolute; bottom: 25px; right: 25px; width: 60px; height: 60px; padding: 12px 0; font-size: 1.5rem;">
+                        +
+                    </label>
+                    <button id="removePicBtn" class="btn btn-danger rounded-circle shadow"
+                        style="position: absolute; bottom: 25px; left: 25px; width: 60px; height: 60px; padding: 12px 0; font-size: 1.5rem; display: none;">
+                        x
+                    </button>
+                    <input type="file" id="fileInput" style="display: none;" accept="image/*">
+                </div>
+            </div>
+
+            <!-- Middle Column: User Details -->
+            <div class="flex-grow-1" style="max-width: 400px;">
+                <h1 id="username" class="fw-bold mb-2 display-5">Loading...</h1>
+                <p id="email" class="text-muted mb-5 fs-4">Loading...</p>
+
+                <ul class="list-group list-group-flush mb-5">
+                    <li
+                        class="list-group-item d-flex justify-content-between align-items-center bg-transparent px-0 border-top">
+                        <span class="fw-semibold fs-5">Friends</span>
+                        <span id="friendsCount" class="badge bg-primary rounded-pill fs-5">0</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center bg-transparent px-0">
+                        <span class="fw-semibold fs-5">Friend Requests</span>
+                        <div>
+                            <span id="friendRequestsCount"
+                                class="badge bg-warning text-dark rounded-pill fs-5 me-2">0</span>
+                            <button id="viewRequestsBtn" class="btn btn-sm btn-outline-dark">View</button>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                Friends
-                                <span id="friendsCount" class="badge bg-primary rounded-pill">0</span>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                Friend Requests
-                                <span id="friendRequestsCount" class="badge bg-warning rounded-pill">0</span>
-                            </li>
-                        </ul>
-                        <div class="d-grid gap-2 mt-4">
-                            <a href="/auth/logout" class="btn btn-danger">Logout</a>
-                        </div>
-                    </div>
+                    </li>
+                </ul>
+
+                <div class="d-grid gap-2 d-md-block">
+                    <a href="/auth/logout" class="btn btn-outline-danger btn-lg px-5 w-100">Logout</a>
+                </div>
+            </div>
+
+            <!-- Right Column: Friends List -->
+            <div class="flex-shrink-0" style="width: 300px;">
+                <h4 class="fw-bold mb-3 border-bottom pb-2">My Friends</h4>
+                <div id="friendsList" class="d-flex flex-wrap gap-2 justify-content-start">
+                    <!-- Friend avatars will be injected here -->
+                    <span class="text-muted">Loading friends...</span>
                 </div>
             </div>
         </div>
     </div>
 
-    <script>
-        fetch('/auth/current_user')
-            .then(response => response.json())
-            .then(user => {
-                if (user) {
-                    document.getElementById('username').textContent = user.username;
-                    document.getElementById('email').textContent = user.email;
-                    document.getElementById('friendsCount').textContent = user.friends ? user.friends.length : 0;
-                    document.getElementById('friendRequestsCount').textContent = user.friendRequests ? user.friendRequests.length : 0;
-
-                    if (user.profilePicture) {
-                        document.getElementById('profilePic').src = user.profilePicture;
-                    }
-
-                    // File Upload Listener
-                    const fileInput = document.getElementById('fileInput');
-                    const removePicBtn = document.getElementById('removePicBtn');
-
-                    // Show remove button if user has a custom picture
-                    if (user.profilePicture) {
-                        removePicBtn.style.display = 'block';
-                    }
-
-                    fileInput.addEventListener('change', async (e) => {
-                        const file = e.target.files[0];
-                        if (!file) return;
-
-                        const formData = new FormData();
-                        formData.append('profilePicture', file);
-
-                        try {
-                            const response = await fetch(`/api/users/${user._id}/profile-picture`, {
-                                method: 'POST',
-                                body: formData
-                            });
-
-                            if (response.ok) {
-                                const result = await response.json();
-                                document.getElementById('profilePic').src = result.profilePicture;
-                                removePicBtn.style.display = 'block'; // Show remove button
-                                alert('Profile picture updated!');
-                            } else {
-                                const error = await response.json();
-                                alert('Error uploading picture: ' + (error.message || 'Unknown error'));
-                            }
-                        } catch (err) {
-                            console.error('Upload error:', err);
-                            alert('Failed to upload picture.');
-                        }
-                    });
-
-                    // Remove Picture Listener
-                    removePicBtn.addEventListener('click', async () => {
-                        if (!confirm('Are you sure you want to remove your profile picture?')) return;
-
-                        try {
-                            const response = await fetch(`/api/users/${user._id}/profile-picture`, {
-                                method: 'DELETE'
-                            });
-
-                            if (response.ok) {
-                                document.getElementById('profilePic').src = '/images/utenteDefault.png';
-                                removePicBtn.style.display = 'none'; // Hide remove button
-                                alert('Profile picture removed!');
-                            } else {
-                                const error = await response.json();
-                                alert('Error removing picture: ' + (error.message || 'Unknown error'));
-                            }
-                        } catch (err) {
-                            console.error('Remove error:', err);
-                            alert('Failed to remove picture.');
-                        }
-                    });
-
-                } else {
-                    window.location.href = '/login';
-                }
-            })
-            .catch(error => {
-                console.error('Error fetching user data:', error);
-            });
-    </script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/friend_requests_popup.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            fetch('/auth/current_user')
+                .then(response => response.json())
+                .then(async (currentUserSession) => {
+                    if (currentUserSession) {
+                        // Fetch full user details to get populated friends list with pictures
+                        try {
+                            const response = await fetch(`/api/users/${currentUserSession._id}`);
+                            if (!response.ok) throw new Error('Failed to fetch user details');
+                            const user = await response.json();
+
+                            document.getElementById('username').textContent = user.username;
+                            document.getElementById('email').textContent = user.email;
+                            document.getElementById('friendsCount').textContent = user.friends ? user.friends.length : 0;
+                            document.getElementById('friendRequestsCount').textContent = user.friendRequests ? user.friendRequests.length : 0;
+
+                            if (user.profilePicture) {
+                                document.getElementById('profilePic').src = user.profilePicture;
+                            }
+
+                            // Render Friends List
+                            const friendsListContainer = document.getElementById('friendsList');
+                            friendsListContainer.innerHTML = ''; // Clear loading
+
+                            if (user.friends && user.friends.length > 0) {
+                                user.friends.forEach(friend => {
+                                    const friendDiv = document.createElement('div');
+                                    friendDiv.className = 'text-center';
+                                    friendDiv.style.width = '60px'; // Slightly larger for layout stability
+
+                                    const img = document.createElement('img');
+                                    img.src = friend.profilePicture || '/images/utenteDefault.png';
+                                    img.alt = friend.username;
+                                    img.className = 'rounded-circle shadow-sm border border-white';
+                                    img.style.width = '50px';
+                                    img.style.height = '50px';
+                                    img.style.objectFit = 'cover';
+                                    img.title = friend.username; // Tooltip name
+                                    img.style.cursor = 'pointer';
+
+                                    // Make image clickable to go to profile
+                                    const link = document.createElement('a');
+                                    link.href = `/user/${friend.username}`;
+                                    link.style.textDecoration = 'none';
+                                    link.appendChild(img);
+
+                                    friendDiv.appendChild(link);
+                                    friendsListContainer.appendChild(friendDiv);
+                                });
+                            } else {
+                                friendsListContainer.innerHTML = '<span class="text-muted">No friends yet.</span>';
+                            }
+
+                            // Setup Listeners with full user object
+                            setupListeners(user);
+
+                        } catch (e) {
+                            console.error("Error loading full profile:", e);
+                            alert("Failed to load profile details.");
+                        }
+                    } else {
+                        window.location.href = '/login';
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching user data:', error);
+                });
+        });
+
+        function setupListeners(user) {
+            const fileInput = document.getElementById('fileInput');
+            const removePicBtn = document.getElementById('removePicBtn');
+
+            // Show remove button if user has a custom picture
+            if (user.profilePicture) {
+                removePicBtn.style.display = 'block';
+            }
+
+            fileInput.addEventListener('change', async (e) => {
+                const file = e.target.files[0];
+                if (!file) return;
+
+                const formData = new FormData();
+                formData.append('profilePicture', file);
+
+                try {
+                    const response = await fetch(`/api/users/${user._id}/profile-picture`, {
+                        method: 'POST',
+                        body: formData
+                    });
+
+                    if (response.ok) {
+                        const result = await response.json();
+                        document.getElementById('profilePic').src = result.profilePicture;
+                        removePicBtn.style.display = 'block'; // Show remove button
+                        alert('Profile picture updated!');
+                    } else {
+                        const error = await response.json();
+                        alert('Error uploading picture: ' + (error.message || 'Unknown error'));
+                    }
+                } catch (err) {
+                    console.error('Upload error:', err);
+                    alert('Failed to upload picture.');
+                }
+            });
+
+            // Remove Picture Listener
+            removePicBtn.addEventListener('click', async () => {
+                if (!confirm('Are you sure you want to remove your profile picture?')) return;
+
+                try {
+                    const response = await fetch(`/api/users/${user._id}/profile-picture`, {
+                        method: 'DELETE'
+                    });
+
+                    if (response.ok) {
+                        document.getElementById('profilePic').src = '/images/utenteDefault.png';
+                        removePicBtn.style.display = 'none'; // Hide remove button
+                        alert('Profile picture removed!');
+                    } else {
+                        const error = await response.json();
+                        alert('Error removing picture: ' + (error.message || 'Unknown error'));
+                    }
+                } catch (err) {
+                    console.error('Remove error:', err);
+                    alert('Failed to remove picture.');
+                }
+            });
+
+            // Friend Requests Popup
+            const viewRequestsBtn = document.getElementById('viewRequestsBtn');
+            if (viewRequestsBtn) {
+                viewRequestsBtn.addEventListener('click', () => {
+                    if (window.FriendRequestsPopup) {
+                        window.FriendRequestsPopup.show();
+                    } else {
+                        console.error("FriendRequestsPopup not defined");
+                    }
+                });
+            }
+        }
+    </script>
 </body>
 
 </html>
