--- a/src/frontend/dashboard.html
+++ b/src/frontend/dashboard.html
@@ -7,6 +7,9 @@
     <title>TrentoArena - Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/game_creation_popup.css">
+    <link rel="stylesheet" href="css/game_popup.css">
+    <link rel="stylesheet" href="css/game_popup_participants.css">
 
     <style>
         .img-rotonda {
