Aggiunta immagine lente per ricerca

--- a/src/frontend/utility/navbar.html
+++ b/src/frontend/utility/navbar.html
@@ -11,6 +11,7 @@
   <div class="container-fluid">
     <div class="flex-grow-1"></div>
     <h1>TrentoArena</h1>
+    <a class="nav-link" href="#"  style="margin-left: 15px;"><img src="../images/lenteRicerca.png" style="height: 60px; width: auto;"></a>
     <div class="flex-grow-1 d-flex justify-content-end">
       <a class="nav-link" href="#" style="margin-right: 15px;" onclick="
         event.preventDefault();
