Add Option to delete a game

--- a/src/frontend/map.html
+++ b/src/frontend/map.html
@@ -139,7 +139,7 @@
                         sport: game.sport && game.sport.name ? game.sport.name : 'Unknown',
                         place: game.place && game.place.name ? game.place.name : 'Unknown', // This place name should be correct
                         date: game.date,
-                        creator: game.creator && game.creator.username ? game.creator.username : 'Unknown',
+                        creator: game.creator,
                         note: game.note,
                         participants: game.participants,
                         maxParticipants: game.maxParticipants,
