--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -88,6 +88,17 @@
                 </div>
             </div>
         </div>
+
+        <!-- My Past Games Section -->
+        <div class="mt-5 mb-5">
+            <h2 class="fw-bold mb-4 border-bottom pb-2">My Past Games</h2>
+            <div id="myPastGamesList" class="row g-3">
+                <!-- Past Games will be injected here -->
+                <div class="col-12">
+                    <span class="text-muted">Loading past games...</span>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -245,31 +256,44 @@
         let cachedGames = {};
 
         async function loadMyGames(userId) {
+            // Fetch Upcoming Games
+            fetchAndRenderGames(userId, false, 'myGamesList', 'No upcoming games found. Join one from the map!');
+
+            // Fetch Past Games
+            fetchAndRenderGames(userId, true, 'myPastGamesList', 'No past games found.');
+        }
+
+        async function fetchAndRenderGames(userId, isFinished, containerId, emptyMessage) {
             try {
-                const response = await fetch(`/api/games?participantId=${userId}&isFinished=false`);
+                const response = await fetch(`/api/games?participantId=${userId}&isFinished=${isFinished}`);
                 if (!response.ok) throw new Error('Failed to fetch games');
                 const games = await response.json();
 
-                // Cache games for popup
-                cachedGames = {};
+                // Cache games for popup (merge with existing cache)
                 games.forEach(g => cachedGames[g._id] = g);
 
-                // Sort by date (nearest first)
-                games.sort((a, b) => new Date(a.date) - new Date(b.date));
+                // Sort
+                if (isFinished) {
+                    // Past games: Descending (Most recent first)
+                    games.sort((a, b) => new Date(b.date) - new Date(a.date));
+                } else {
+                    // Upcoming games: Ascending (Nearest first)
+                    games.sort((a, b) => new Date(a.date) - new Date(b.date));
+                }
 
-                renderMyGames(games);
+                renderGames(games, containerId, emptyMessage);
             } catch (err) {
-                console.error('Error loading games:', err);
-                document.getElementById('myGamesList').innerHTML = '<div class="col-12 text-danger">Failed to load games.</div>';
+                console.error(`Error loading games for ${containerId}:`, err);
+                document.getElementById(containerId).innerHTML = '<div class="col-12 text-danger">Failed to load games.</div>';
             }
         }
 
-        function renderMyGames(games) {
-            const container = document.getElementById('myGamesList');
+        function renderGames(games, containerId, emptyMessage) {
+            const container = document.getElementById(containerId);
             container.innerHTML = '';
 
             if (games.length === 0) {
-                container.innerHTML = '<div class="col-12 text-muted">No upcoming games found. Join one from the map!</div>';
+                container.innerHTML = `<div class="col-12 text-muted">${emptyMessage}</div>`;
                 return;
             }
 
@@ -280,15 +304,23 @@
 
                 const sportName = game.sport ? game.sport.name : 'Unknown Sport';
                 const placeName = game.place ? game.place.name : 'Unknown Place';
+                const isFinished = game.isFinished;
 
                 const card = document.createElement('div');
                 card.className = 'col-md-6 col-lg-4';
+
+                // Add grayscale filter style for finished games if desired, or just different badge
+                const cardStyle = isFinished ? 'opacity: 0.8;' : '';
+
                 card.innerHTML = `
-                    <div class="card h-100 shadow-sm" style="cursor: pointer; transition: transform 0.2s;" onclick="openGameDetails('${game._id}')">
+                    <div class="card h-100 shadow-sm" style="cursor: pointer; transition: transform 0.2s; ${cardStyle}" onclick="openGameDetails('${game._id}')">
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center mb-2">
                                 <h5 class="card-title fw-bold mb-0 text-primary">${sportName}</h5>
-                                <span class="badge bg-secondary">${game.participants.length}/${game.maxParticipants}</span>
+                                <div>
+                                    ${isFinished ? '<span class="badge bg-secondary me-1">Finished</span>' : ''}
+                                    <span class="badge bg-secondary">${game.participants.length}/${game.maxParticipants}</span>
+                                </div>
                             </div>
                             <h6 class="card-subtitle mb-2 text-muted">${placeName}</h6>
                             <p class="card-text mb-2">
