--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -63,6 +63,14 @@
                     </li>
                 </ul>
 
+                <!-- ELO Statistics -->
+                <div id="eloStatsContainer" class="mb-5" style="display: none;">
+                    <h5 class="fw-bold mb-3">Skill Levels</h5>
+                    <ul id="eloList" class="list-group list-group-flush">
+                        <!-- ELO items will be injected here -->
+                    </ul>
+                </div>
+
                 <div class="d-grid gap-2 d-md-block">
                     <a href="/auth/logout" class="btn btn-outline-danger btn-lg px-5 w-100">Logout</a>
                 </div>
@@ -157,6 +165,27 @@
                                 });
                             } else {
                                 friendsListContainer.innerHTML = '<span class="text-muted">No friends yet.</span>';
+                            }
+
+                            // Render ELO Stats
+                            if (user.sportsElo && user.sportsElo.length > 0) {
+                                const eloContainer = document.getElementById('eloStatsContainer');
+                                const eloList = document.getElementById('eloList');
+                                eloContainer.style.display = 'block';
+                                eloList.innerHTML = '';
+
+                                user.sportsElo.forEach(stat => {
+                                    const sportName = stat.sport ? stat.sport.name : 'Unknown Sport';
+                                    const elo = Math.round(stat.elo);
+
+                                    const li = document.createElement('li');
+                                    li.className = 'list-group-item d-flex justify-content-between align-items-center bg-transparent px-0';
+                                    li.innerHTML = `
+                                        <span>${sportName}</span>
+                                        <span class="badge bg-info text-dark rounded-pill">${elo} pts</span>
+                                    `;
+                                    eloList.appendChild(li);
+                                });
                             }
 
                             // Setup Listeners with full user object
